--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ h1.ai-overlord-title:before {
   margin-top: 20px;
   padding: 10px;
   background-color: #222;
+  border: 2px solid #000;
   border-radius: 10px;
   display: flex;
   flex-direction: grid;
@@ -216,6 +217,7 @@ h1.ai-overlord-title:before {
   margin-top: 20px;
   padding: 10px;
   background-color: #444;
+  border: 2px solid #000;
   border-radius: 10px;
   display: flex;
   flex-direction: grid;
@@ -248,6 +250,7 @@ h1.ai-overlord-title:before {
   margin-top: 20px;
   padding: 10px;
   background-color: #666;
+  border: 2px solid #000;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
