--- a/style.scss
+++ b/style.scss
@@ -679,9 +679,13 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 .centered-row {
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     margin-top: 20px;
+}
+
+.shuffler {
+    margin-bottom: 10px;
 }
 
 .flex-row {
@@ -880,8 +884,18 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     font-size: 2.5em;
 }
 
+.small-toggle-title {
+    font-size: 1.25em;
+    font-weight: bold;
+    color: black !important;
+}
+
 .spacer {
     width: 20px;
+}
+
+.small-spacer {
+    width: 10px;
 }
 
 /* HAMBURGER MENU STUFF */
@@ -1011,15 +1025,24 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     height: 38px;
 }
 
+.small-switch {
+    position: relative;
+    display: inline-block;
+    width: 32px;
+    height: 19px;
+}
+
 /* Hide default HTML checkbox */
-.switch input {
+.switch input,
+.small-switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
 /* The slider */
-.slider {
+.slider,
+.small-slider {
     position: absolute;
     cursor: pointer;
     top: 0;
@@ -1043,11 +1066,25 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     transition: 0.4s;
 }
 
-input:checked + .slider {
+.small-slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked + .slider,
+input:checked + .small-slider {
     background: linear-gradient(90deg, #3859ec, #00eeff);
 }
 
-input:focus + .slider {
+input:focus + .slider,
+input:focus + .small-slider {
     box-shadow: 0 0 1px #2196f3;
 }
 
@@ -1057,13 +1094,25 @@ input:checked + .slider:before {
     transform: translateX(26px);
 }
 
+input:checked + .small-slider:before {
+    -webkit-transform: translateX(13px);
+    -ms-transform: translateX(13px);
+    transform: translateX(13px);
+}
+
 /* Rounded sliders */
 .slider.round {
     border: #fff solid 2px;
     border-radius: 34px;
 }
 
-.slider.round:before {
+.small-slider.round {
+    border: #fff solid 1px;
+    border-radius: 17px;
+}
+
+.slider.round:before,
+.small-slider.round:before {
     border-radius: 50%;
 }
 
