--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ body {
 #devPow,
 #devVip {
     background-color: white;
-    border-radius: 10px;
+    border-radius: 5px;
     display: inline-block;
     width: 140px;
     height: 20px;
@@ -188,6 +188,7 @@ h1.ai-overlord-title {
 #viperCoinBar {
     display: flex;
     justify-content: space-between;
+    margin-top: 2px;
 }
 
 #viperCoinCounter {
@@ -226,6 +227,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         color: #fff; // White text for contrast
         background: $researchLab-gradient;
         padding: 12px 24px;
+        border: 2px solid white;
         border-radius: 10px;
         font-family: "Space Grotesk", sans-serif;
         font-size: 1.8em;
@@ -264,6 +266,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         color: #fff; // White text for contrast
         background: $quantumCenter-gradient;
         padding: 12px 24px;
+        border: 2px solid white;
         border-radius: 10px;
         font-family: "Space Grotesk", sans-serif;
         font-size: 1.8em;
@@ -302,6 +305,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         color: #fff; // White text for contrast
         background: $globalAiNetwork-gradient;
         padding: 12px 24px;
+        border: 2px solid white;
         border-radius: 10px;
         font-family: "Space Grotesk", sans-serif;
         font-size: 1.8em;
@@ -322,8 +326,8 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     margin-bottom: 10px;
 }
 
-/* Zoom Controls Styling */
-.zoom-controls {
+/* Map Controls Styling */
+.map-controls {
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
@@ -1128,15 +1132,17 @@ input:checked + .small-slider:before {
     );
     border: 2px solid #fff;
     border-radius: 15px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: 40px;
+    margin-bottom: 40px;
     padding: 20px 30px;
     box-shadow: 0 0 20px #e445e9;
     font-size: 1.5em;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25%;
+    width: 30%;
+    transform: scale(1);
+    transform-origin: center center;
 }
 
 /* Volume Slider Styling */
