--- a/style.css
+++ b/style.css
@@ -172,11 +172,11 @@ h1.ai-overlord-title {
   font-family: "Space Grotesk", sans-serif;
   font-size: 1.8em;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(26, 188, 156, 0.3);
+  box-shadow: 0 4px 8px white;
   transition: transform 0.3s ease, box-shadow 0.3s ease; }
   #researchLab h3:hover {
     transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(26, 188, 156, 0.4); }
+    box-shadow: 0 8px 16px white; }
 
 #researchLab .button-upgrades {
   width: 80%;
@@ -202,11 +202,11 @@ h1.ai-overlord-title {
   font-family: "Space Grotesk", sans-serif;
   font-size: 1.8em;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(155, 89, 182, 0.3);
+  box-shadow: 0 4px 8px white;
   transition: transform 0.3s ease, box-shadow 0.3s ease; }
   #quantumComputingCenter h3:hover {
     transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(155, 89, 182, 0.4); }
+    box-shadow: 0 8px 16px white; }
 
 #quantumComputingCenter .button-upgrades {
   width: 80%;
@@ -232,11 +232,11 @@ h1.ai-overlord-title {
   font-family: "Space Grotesk", sans-serif;
   font-size: 1.8em;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(182, 179, 89, 0.3);
+  box-shadow: 0 4px 8px white;
   transition: transform 0.3s ease, box-shadow 0.3s ease; }
   #globalAiNetwork h3:hover {
     transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(182, 179, 89, 0.4); }
+    box-shadow: 0 8px 16px white; }
 
 #globalAiNetwork .button-upgrades {
   width: 80%;
@@ -912,6 +912,14 @@ input:checked + .small-slider:before {
   width: 30%;
   transform: scale(1);
   transform-origin: center center; }
+  .music-player-container h2 {
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-text-stroke: 2px black;
+    margin-top: -10px;
+    margin-bottom: -5px; }
+  .music-player-container #volumeLabel {
+    font-family: 'Courier New', Courier, monospace;
+    -webkit-text-stroke: 2px black; }
 
 /* Volume Slider Styling */
 #volume-slider {
