--- a/style.scss
+++ b/style.scss
@@ -232,13 +232,13 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         font-family: "Space Grotesk", sans-serif;
         font-size: 1.8em;
         text-align: center;
-        box-shadow: 0 4px 8px rgba(26, 188, 156, 0.3); // Subtle shadow with theme color
+        box-shadow: 0 4px 8px white;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
 
         // Hover effect for interactivity
         &:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(26, 188, 156, 0.4);
+            box-shadow: 0 8px 16px white;
         }
     }
 }
@@ -271,13 +271,13 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         font-family: "Space Grotesk", sans-serif;
         font-size: 1.8em;
         text-align: center;
-        box-shadow: 0 4px 8px rgba(155, 89, 182, 0.3); // Subtle shadow with theme color
+        box-shadow: 0 4px 8px white;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
 
         // Hover effect for interactivity
         &:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(155, 89, 182, 0.4);
+            box-shadow: 0 8px 16px white;
         }
     }
 }
@@ -310,13 +310,13 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         font-family: "Space Grotesk", sans-serif;
         font-size: 1.8em;
         text-align: center;
-        box-shadow: 0 4px 8px rgba(182, 179, 89, 0.3); // Subtle shadow with theme color
+        box-shadow: 0 4px 8px white;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
 
         // Hover effect for interactivity
         &:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(182, 179, 89, 0.4);
+            box-shadow: 0 8px 16px white;
         }
     }
 }
@@ -1143,6 +1143,17 @@ input:checked + .small-slider:before {
     width: 30%;
     transform: scale(1);
     transform-origin: center center;
+
+    h2 {
+        font-family: 'Courier New', Courier, monospace;
+        -webkit-text-stroke: 2px black;
+        margin-top: -10px;
+        margin-bottom: -5px;
+    }
+    #volumeLabel {
+        font-family: 'Courier New', Courier, monospace;
+        -webkit-text-stroke: 2px black;
+    }
 }
 
 /* Volume Slider Styling */
