cleanup code, improve music player, adjust styles

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 .dev-tools {
   background-color: #000;
   border: 1px solid red;
-  border-radius: 10px;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -143,7 +143,7 @@ h1.ai-overlord-title {
 #viperCoinBar {
   display: flex;
   justify-content: space-between;
-  margin-top: 2px; }
+  margin-top: 4px; }
 
 #viperCoinCounter {
   font-size: 1.5em; }
@@ -172,7 +172,7 @@ h1.ai-overlord-title {
   font-family: "Space Grotesk", sans-serif;
   font-size: 1.8em;
   text-align: center;
-  box-shadow: 0 4px 8px white;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
   transition: transform 0.3s ease, box-shadow 0.3s ease; }
   #researchLab h3:hover {
     transform: translateY(-5px);
@@ -202,7 +202,7 @@ h1.ai-overlord-title {
   font-family: "Space Grotesk", sans-serif;
   font-size: 1.8em;
   text-align: center;
-  box-shadow: 0 4px 8px white;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
   transition: transform 0.3s ease, box-shadow 0.3s ease; }
   #quantumComputingCenter h3:hover {
     transform: translateY(-5px);
@@ -232,7 +232,7 @@ h1.ai-overlord-title {
   font-family: "Space Grotesk", sans-serif;
   font-size: 1.8em;
   text-align: center;
-  box-shadow: 0 4px 8px white;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
   transition: transform 0.3s ease, box-shadow 0.3s ease; }
   #globalAiNetwork h3:hover {
     transform: translateY(-5px);
@@ -472,6 +472,7 @@ h1.ai-overlord-title {
   display: inline-block;
   font-weight: 600;
   font-size: 18px;
+  align-items: center;
   margin: 5px;
   padding: 0 18px;
   line-height: 30px;
@@ -518,6 +519,7 @@ h1.ai-overlord-title {
   box-shadow: #000 2px 2px 0 0;
   transform: translate(2px, 2px); }
 
+#music-toggle-button img,
 #prev-track-button img,
 #next-track-button img {
   position: relative;
@@ -525,8 +527,7 @@ h1.ai-overlord-title {
 
 @media (min-width: 768px) {
   .button-gather-res,
-  .button-upgrades,
-  #music-toggle-button {
+  .button-upgrades {
     min-width: 120px;
     padding: 0 15px; } }
 .crypto-icon {
@@ -571,7 +572,7 @@ h1.ai-overlord-title {
 
 .major-upgrades {
   height: 100%;
-  width: 100%;
+  width: 75%;
   padding: 0.6em 2em;
   border: none;
   outline: none;
@@ -582,7 +583,8 @@ h1.ai-overlord-title {
   border-radius: 10px;
   user-select: none;
   -webkit-user-select: none;
-  touch-action: manipulation; }
+  touch-action: manipulation;
+  transition: transform 0.2s ease; }
 
 .major-upgrades:before {
   content: "";
@@ -599,6 +601,10 @@ h1.ai-overlord-title {
   animation: glowing-button 20s linear infinite;
   transition: opacity 0.3s ease-in-out;
   border-radius: 10px; }
+
+.major-upgrades:hover {
+  transform: scale(1.05);
+  transform-origin: center center; }
 
 @keyframes glowing-button {
   0% {
@@ -646,19 +652,27 @@ h1.ai-overlord-title {
   width: 100%;
   height: 15px;
   background-color: #ddd;
+  border: 2px solid black;
   border-radius: 5px;
   overflow: hidden;
   margin-top: 5px;
   position: relative; }
 
 .progress-fill {
+  border-right: 1px solid black;
+  border-radius: 2px;
   height: 100%;
   background-color: #4caf50;
-  /* Green color for progress */
   width: 0;
-  /* Initial width */
-  transition: width 0.3s ease;
-  /* Smooth transition effect */ }
+  transition: width 0.3s ease; }
+
+.music-progress-fill {
+  border-right: 1px solid black;
+  border-radius: 2px;
+  height: 100%;
+  background: linear-gradient(135deg, #0b112e, #3859ec, #00eeff, #a9f8fd);
+  width: 0;
+  transition: width 0.3s ease; }
 
 .level-display {
   font-family: "Courier New", Courier, monospace;
@@ -696,9 +710,9 @@ h1.ai-overlord-title {
   font-size: 2.5em; }
 
 .small-toggle-title {
+  font-family: 'Courier New', Courier, monospace;
   font-size: 1.25em;
-  font-weight: bold;
-  color: black !important; }
+  font-weight: bold; }
 
 .spacer {
   width: 20px; }
@@ -910,16 +924,30 @@ input:checked + .small-slider:before {
   flex-direction: column;
   align-items: center;
   width: 30%;
-  transform: scale(1);
+  transform: scale(0.85);
   transform-origin: center center; }
   .music-player-container h2 {
     font-family: 'Courier New', Courier, monospace;
-    -webkit-text-stroke: 2px black;
-    margin-top: -10px;
-    margin-bottom: -5px; }
+    margin-top: -5px;
+    margin-bottom: -10px; }
   .music-player-container #volumeLabel {
     font-family: 'Courier New', Courier, monospace;
-    -webkit-text-stroke: 2px black; }
+    font-size: 16;
+    font-weight: bold;
+    margin-bottom: 5px; }
+
+.progress-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: baseline;
+  width: 100%; }
+
+#current-time,
+#total-time {
+  width: 50px;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 24px; }
 
 /* Volume Slider Styling */
 #volume-slider {
@@ -995,8 +1023,8 @@ input:checked + .small-slider:before {
   position: relative;
   margin: 1em;
   min-height: 250px;
-  max-width: 800px;
-  min-width: 800px;
+  max-width: 700px;
+  min-width: 700px;
   box-shadow: inset 0 0 1px 0.66667em #000;
   border-radius: 1.33333em;
   background: #1d1d1d;
@@ -1028,7 +1056,7 @@ input:checked + .small-slider:before {
   position: relative;
   margin: 1.66667em;
   min-height: 210px;
-  min-width: 720px;
+  min-width: 620px;
   border-radius: 1.33333em;
   box-shadow: 0 0 1px 3px rgba(10, 10, 10, 0.7);
   background: #141414;
