--- a/style.css
+++ b/style.css
@@ -317,34 +317,6 @@ h1.ai-overlord-title {
   transform: none !important; }
 
 /*
- * Below are Cascading Style Sheet (CSS) definitions in use in this file,
- * which allow easily changing how countries are displayed.
- *
- * The styles are applied in the order in which they are defined (and re-defined) here in the preamble.
- */
-/*
- * Circles around small countries and territories
- *
- * Change opacity to 1 to display all circles
- */
-.circlexx {
-  opacity: 0;
-  fill: #c0c0c0;
-  stroke: #000000;
-  stroke-width: 0.5; }
-
-/*
-  * Smaller circles around subnational territories: Australian external territories, Chinese SARs, Dutch special municipalities, and French DOMs (overseas regions/departments) [but not French COMs (overseas collectivities)]
-  *
-  * Change opacity to 1 to display all circles
-  */
-.subxx {
-  opacity: 0;
-  fill: #c0c0c0;
-  stroke: #000000;
-  stroke-width: 0.3; }
-
-/*
   * Land
   * (all land, as opposed to water, should belong to this class; in order to modify the coastline for land pieces with no borders on them a special class "coastxx" has been added below)
   */
@@ -378,41 +350,6 @@ h1.ai-overlord-title {
     cursor: pointer; }
 
 /*
-  * Circles around small countries without permanent population
-  *
-  * Change opacity to 1 to display all circles
-  */
-.noxx {
-  opacity: 0;
-  fill: #c0c0c0;
-  stroke: #000000;
-  stroke-width: 0.5; }
-
-/*
-  * Styles for territories with limited or no recognition
-  * (all of them - including Taiwan - are overlays (i.e. duplicate layers) over their "host" countries, and so not showing them doesn't leave any gaps on the map)
-  *
-  * Change opacity to 1 to display all territories
-  */
-.limitxx {
-  opacity: 0;
-  fill: #c0c0c0;
-  stroke: #ffffff;
-  stroke-width: 0.2;
-  fill-rule: evenodd; }
-
-/*
-  * Smaller circles around small territories with limited or no recognition
-  *
-  * Change opacity to 1 to display all circles
-  */
-.unxx {
-  opacity: 0;
-  fill: #c0c0c0;
-  stroke: #000000;
-  stroke-width: 0.3; }
-
-/*
   * Oceans, seas, and large lakes
   */
 .oceanxx {
@@ -426,28 +363,6 @@ h1.ai-overlord-title {
   *
   * .eu - for members of European Union
   * .eaeu - for members of Eurasian Economic Union
-  */
-/*
-  * Additional style rules
-  *
-  * The following are examples of colouring countries.
-  * These can be substituted with custom styles to colour the countries on the map.
-  *
-  * Colour a few countries:
-  *
-  * .gb, .au, .nc
-  * {
-  * 	fill: #ff0000;
-  * }
-  *
-  * Colour a few small-country circles (along with the countries):
-  *
-  * .ms, .ky
-  * {
-  * 	opacity: 1;
-  * 	fill: #ff0000;
-  * }
-  *
   */
 .crt-container {
   display: flex;
@@ -508,7 +423,7 @@ h1.ai-overlord-title {
   touch-action: manipulation;
   transition: transform 0.2s ease, box-shadow 0.2s ease; }
   .button-upgrades:hover {
-    transform: scale(1.05);
+    transform: scale(1.02);
     box-shadow: #000 4px 4px 0 0; }
 
 .button-gather-res:active,
@@ -723,58 +638,32 @@ h1.ai-overlord-title {
 /* HAMBURGER MENU STUFF */
 /* The Overlay (background) */
 .overlay {
-  /* Height & width depends on how you want to reveal the overlay (see JS below) */
+  /* Height & width depends on how you want to reveal the overlay */
   height: 100%;
   width: 0;
   position: fixed;
-  /* Stay in place */
   z-index: 1;
-  /* Sit on top */
   left: 0;
   top: 0;
   background-color: black;
-  /* Black fallback color */
   background-color: rgba(0, 0, 0, 0.9);
-  /* Black w/opacity */
   overflow-x: hidden;
-  /* Disable horizontal scroll */
-  transition: 0.5s;
-  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */ }
+  transition: 0.5s; }
 
 /* Position the content inside the overlay */
 .overlay-content {
   display: inline-flex;
   position: relative;
   top: 25%;
-  /* 25% from the top */
   width: 100%;
-  /* 100% width */
   text-align: center;
-  /* Centered text/links */
   margin-top: 30px;
-  /* 30px top margin to avoid conflict with the close button on smaller screens */
   justify-content: center;
   align-items: center; }
 
 .overlay-content span {
   font-size: 34px;
   padding-right: 10px; }
-
-/* The navigation links inside the overlay */
-.overlay a {
-  padding: 8px;
-  text-decoration: none;
-  font-size: 36px;
-  color: #818181;
-  display: block;
-  /* Display block instead of inline */
-  transition: 0.3s;
-  /* Transition effects on hover (color) */ }
-
-/* When you mouse over the navigation links, change their color */
-.overlay a:hover,
-.overlay a:focus {
-  color: #f1f1f1; }
 
 /* Position the close button (top right corner) */
 .overlay .closebtn {
@@ -1093,8 +982,7 @@ input:checked + .small-slider:before {
   white-space: pre;
   overflow: hidden;
   border-right: 0.15em solid #3f3;
-  animation: blink 1s infinite;
-  /* Add a blinking cursor effect */ }
+  animation: blink 1s infinite; }
 
 @keyframes blink {
   0% {
