--- a/style.scss
+++ b/style.scss
@@ -224,7 +224,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 #researchLab {
     h3 {
         margin-top: 0;
-        color: #fff; // White text for contrast
+        color: #fff;
         background: $researchLab-gradient;
         padding: 12px 24px;
         border: 2px solid white;
@@ -235,7 +235,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-        // Hover effect for interactivity
         &:hover {
             transform: translateY(-5px);
             box-shadow: 0 8px 16px white;
@@ -263,7 +262,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 #quantumComputingCenter {
     h3 {
         margin-top: 0;
-        color: #fff; // White text for contrast
+        color: #fff;
         background: $quantumCenter-gradient;
         padding: 12px 24px;
         border: 2px solid white;
@@ -274,7 +273,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-        // Hover effect for interactivity
         &:hover {
             transform: translateY(-5px);
             box-shadow: 0 8px 16px white;
@@ -302,7 +300,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 #globalAiNetwork {
     h3 {
         margin-top: 0;
-        color: #fff; // White text for contrast
+        color: #fff;
         background: $globalAiNetwork-gradient;
         padding: 12px 24px;
         border: 2px solid white;
@@ -313,7 +311,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
         box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
         transition: transform 0.3s ease, box-shadow 0.3s ease;
 
-        // Hover effect for interactivity
         &:hover {
             transform: translateY(-5px);
             box-shadow: 0 8px 16px white;
@@ -358,17 +355,17 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     position: relative;
     width: 100%;
     max-width: 1200px;
-    height: 495px; // Set a fixed height for the container
+    height: 495px;
     margin: 0 auto;
     background-color: #a3a3a3;
     border: 2px solid #333;
     border-radius: 10px;
-    overflow: hidden; // Hide overflow when panning
+    overflow: hidden;
 
     #world-map {
         width: 100%;
         height: 100%;
-        transform-origin: top left; // Ensure transformations start from top-left
+        transform-origin: top left;
         cursor: grab;
 
         .country {
@@ -427,37 +424,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 }
 
 /*
- * Below are Cascading Style Sheet (CSS) definitions in use in this file,
- * which allow easily changing how countries are displayed.
- *
- * The styles are applied in the order in which they are defined (and re-defined) here in the preamble.
- */
-
-/*
- * Circles around small countries and territories
- *
- * Change opacity to 1 to display all circles
- */
-.circlexx {
-    opacity: 0;
-    fill: #c0c0c0;
-    stroke: #000000;
-    stroke-width: 0.5;
-}
-
-/*
-  * Smaller circles around subnational territories: Australian external territories, Chinese SARs, Dutch special municipalities, and French DOMs (overseas regions/departments) [but not French COMs (overseas collectivities)]
-  *
-  * Change opacity to 1 to display all circles
-  */
-.subxx {
-    opacity: 0;
-    fill: #c0c0c0;
-    stroke: #000000;
-    stroke-width: 0.3;
-}
-
-/*
   * Land
   * (all land, as opposed to water, should belong to this class; in order to modify the coastline for land pieces with no borders on them a special class "coastxx" has been added below)
   */
@@ -500,44 +466,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 }
 
 /*
-  * Circles around small countries without permanent population
-  *
-  * Change opacity to 1 to display all circles
-  */
-.noxx {
-    opacity: 0;
-    fill: #c0c0c0;
-    stroke: #000000;
-    stroke-width: 0.5;
-}
-
-/*
-  * Styles for territories with limited or no recognition
-  * (all of them - including Taiwan - are overlays (i.e. duplicate layers) over their "host" countries, and so not showing them doesn't leave any gaps on the map)
-  *
-  * Change opacity to 1 to display all territories
-  */
-.limitxx {
-    opacity: 0;
-    fill: #c0c0c0;
-    stroke: #ffffff;
-    stroke-width: 0.2;
-    fill-rule: evenodd;
-}
-
-/*
-  * Smaller circles around small territories with limited or no recognition
-  *
-  * Change opacity to 1 to display all circles
-  */
-.unxx {
-    opacity: 0;
-    fill: #c0c0c0;
-    stroke: #000000;
-    stroke-width: 0.3;
-}
-
-/*
   * Oceans, seas, and large lakes
   */
 .oceanxx {
@@ -552,29 +480,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
   *
   * .eu - for members of European Union
   * .eaeu - for members of Eurasian Economic Union
-  */
-
-/*
-  * Additional style rules
-  *
-  * The following are examples of colouring countries.
-  * These can be substituted with custom styles to colour the countries on the map.
-  *
-  * Colour a few countries:
-  *
-  * .gb, .au, .nc
-  * {
-  * 	fill: #ff0000;
-  * }
-  *
-  * Colour a few small-country circles (along with the countries):
-  *
-  * .ms, .ky
-  * {
-  * 	opacity: 1;
-  * 	fill: #ff0000;
-  * }
-  *
   */
 
 .crt-container {
@@ -615,7 +520,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     touch-action: manipulation;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 
-    // Hover effect for interactivity
     &:hover {
         transform: scale(1.05);
         box-shadow: #000 4px 4px 0 0;
@@ -641,7 +545,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     touch-action: manipulation;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
 
-    // Hover effect for interactivity
     &:hover {
         transform: scale(1.02);
         box-shadow: #000 4px 4px 0 0;
@@ -921,23 +824,17 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 /* HAMBURGER MENU STUFF */
 /* The Overlay (background) */
 .overlay {
-    /* Height & width depends on how you want to reveal the overlay (see JS below) */
+    /* Height & width depends on how you want to reveal the overlay */
     height: 100%;
     width: 0;
     position: fixed;
-    /* Stay in place */
     z-index: 1;
-    /* Sit on top */
     left: 0;
     top: 0;
     background-color: rgb(0, 0, 0);
-    /* Black fallback color */
     background-color: rgba(0, 0, 0, 0.9);
-    /* Black w/opacity */
     overflow-x: hidden;
-    /* Disable horizontal scroll */
     transition: 0.5s;
-    /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
 /* Position the content inside the overlay */
@@ -945,13 +842,9 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     display: inline-flex;
     position: relative;
     top: 25%;
-    /* 25% from the top */
     width: 100%;
-    /* 100% width */
     text-align: center;
-    /* Centered text/links */
     margin-top: 30px;
-    /* 30px top margin to avoid conflict with the close button on smaller screens */
     justify-content: center;
     align-items: center;
 }
@@ -959,24 +852,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 .overlay-content span {
     font-size: 34px;
     padding-right: 10px;
-}
-
-/* The navigation links inside the overlay */
-.overlay a {
-    padding: 8px;
-    text-decoration: none;
-    font-size: 36px;
-    color: #818181;
-    display: block;
-    /* Display block instead of inline */
-    transition: 0.3s;
-    /* Transition effects on hover (color) */
-}
-
-/* When you mouse over the navigation links, change their color */
-.overlay a:hover,
-.overlay a:focus {
-    color: #f1f1f1;
 }
 
 /* Position the close button (top right corner) */
@@ -1280,8 +1155,8 @@ $slider-glow-color: rgba(120, 12, 163, 0.7);
 
 /* With simplifications and modifications by Robert Bottomley. */
 
-$green-phosphor: #3f3; // P1
-$amber-phosphor: #ffb000; // P3
+$green-phosphor: #3f3;
+$amber-phosphor: #ffb000;
 $white-phosphor: #cce;
 $red-phosphor: #b51212;
 $purple-phosphor: #8c42d1;
@@ -1409,7 +1284,6 @@ $crt-overscan-width: 2.66667em;
     overflow: hidden;
     border-right: 0.15em solid $phosphor-color;
     animation: blink 1s infinite;
-    /* Add a blinking cursor effect */
 }
 
 @keyframes blink {
