--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
 
 /* NORMAL STUFF */
 h2.stage-1-title {
+  margin-top: 0px;
   margin-bottom: 0px;
   font-family: "Courier New", Courier, monospace;
   font-size: 2.5em;
@@ -72,7 +73,7 @@ h2.stage-1-title {
 
 h1.ai-overlord-title {
   margin-top: 0px;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
   font-family: "Courier New", Courier, monospace;
   font-size: 4rem;
   color: #ff85c1;
@@ -85,7 +86,8 @@ h1.ai-overlord-title {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5); }
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  z-index: 15; }
   h1.ai-overlord-title:before {
     content: "AI Overlord";
     position: absolute;
@@ -94,7 +96,7 @@ h1.ai-overlord-title {
     width: 100%;
     height: 100%;
     color: #ff85c1;
-    z-index: -1;
+    z-index: 14;
     filter: blur(5px);
     opacity: 0.6; }
   @media (max-width: 768px) {
@@ -328,6 +330,14 @@ h1.ai-overlord-title {
   top: 10px;
   right: 10px;
   transform: none !important; }
+
+.map-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 976px;
+  height: 495px;
+  pointer-events: none; }
 
 /*
   * Land
@@ -659,7 +669,7 @@ h1.ai-overlord-title {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 15;
+  z-index: 16;
   left: 0;
   top: 0;
   background-color: black;
@@ -705,7 +715,8 @@ h1.ai-overlord-title {
   height: 30px;
   position: relative;
   cursor: pointer;
-  margin-top: 20px; }
+  margin-top: 20px;
+  z-index: 15; }
 
 .hamburger::before,
 .hamburger::after,
