--- a/style.scss
+++ b/style.scss
@@ -54,6 +54,7 @@ $glow-color: #ff85c1;
 $globalAiNetwork-primary: #00ffff; // Bright Cyan for connectivity and clarity
 
 h2.stage-1-title {
+    margin-top: 0px;
     margin-bottom: 0px;
     font-family: "Courier New", Courier, monospace;
     font-size: 2.5em;
@@ -95,7 +96,7 @@ h2.stage-1-title {
 
 h1.ai-overlord-title {
     margin-top: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     font-family: "Courier New", Courier, monospace;
     font-size: 4rem;
     color: $pink-red;
@@ -116,6 +117,7 @@ h1.ai-overlord-title {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+    z-index: 15;
 
     &:before {
         content: "AI Overlord";
@@ -125,7 +127,7 @@ h1.ai-overlord-title {
         width: 100%;
         height: 100%;
         color: $glow-color;
-        z-index: -1;
+        z-index: 14;
         filter: blur(5px);
         opacity: 0.6;
     }
@@ -434,6 +436,15 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     top: 10px;
     right: 10px;
     transform: none !important; // Prevent any inherited transformations
+}
+
+.map-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 976px;
+    height: 495px;
+    pointer-events: none;
 }
 
 /*
@@ -845,7 +856,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 15;
+    z-index: 16;
     left: 0;
     top: 0;
     background-color: rgb(0, 0, 0);
@@ -900,6 +911,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     position: relative;
     cursor: pointer;
     margin-top: 20px;
+    z-index: 15;
 }
 
 .hamburger::before,
