--- a/style.scss
+++ b/style.scss
@@ -154,6 +154,15 @@ h1.ai-overlord-title {
     padding: 10px 0;
 }
 
+.bottom-shadow {
+    background-color: #2f2f2f;
+    width: 960px;
+    padding: 20px;
+    margin: 30px auto;
+    /* Bottom-only box-shadow */
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+}
+
 #autoGathererCounter,
 #optimizationsCounter,
 #highEfficiencyGathererCounter {
@@ -654,6 +663,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 .major-upgrades {
     height: 100%;
     width: 75%;
+    margin-right: 20px;
     padding: 0.6em 2em;
     border: none;
     outline: none;
