improve map screen overlay

--- a/style.css
+++ b/style.css
@@ -237,6 +237,7 @@ h1.ai-overlord-title {
 
 #globalAiNetwork {
   margin-top: 20px;
+  margin-bottom: 60px;
   padding: 10px;
   background-color: #666;
   border: 2px solid #000;
