--- a/style.scss
+++ b/style.scss
@@ -311,6 +311,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 #globalAiNetwork {
     margin-top: 20px;
+    margin-bottom: 60px;
     padding: 10px;
     background-color: #666;
     border: 2px solid #000;
