improve sticky header...again

--- a/style.scss
+++ b/style.scss
@@ -150,13 +150,13 @@ h1.ai-overlord-title {
     background-color: #333;
     top: 0;
     z-index: 10;
-    margin-bottom: 30px;
+    width: 960px;
+    margin-bottom: 40px;
     padding: 10px 0;
 }
 
 .bottom-shadow {
-    background-color: #2f2f2f;
-    width: 960px;
+    background-color: #2a2a2a;
     padding: 20px;
     margin: 30px auto;
     /* Bottom-only box-shadow */
