--- a/style.css
+++ b/style.css
@@ -175,6 +175,18 @@ h1.ai-overlord-title {
   font-size: 1.5em;
   margin-left: auto; }
 
+#stageBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+#stage-timer {
+  font-size: 3.5em;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  margin-left: auto;
+  -webkit-text-stroke: 2px black; }
+
 #researchLab {
   margin-top: 20px;
   padding: 10px;
@@ -671,6 +683,9 @@ h1.ai-overlord-title {
 
 .small-spacer {
   width: 10px; }
+
+.big-spacer {
+  width: 300px; }
 
 /* HAMBURGER MENU STUFF */
 /* The Overlay (background) */
