--- a/style.css
+++ b/style.css
@@ -880,7 +880,7 @@ input:checked + .small-slider:before {
 
 .progress-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: baseline;
   width: 100%; }
 
