- end screen for stage 1 with stats - more music - small tweaks

--- a/style.scss
+++ b/style.scss
@@ -23,7 +23,9 @@ body {
     border: 2px solid white;
     border-radius: 8px;
     color: #fff;
-    padding: 12px 24px;
+    width: 150px;
+    margin: 1px;
+    padding: 6px 12px;
     font-size: 1rem;
     font-family: 'Space Grotesk', sans-serif;
     cursor: pointer;
@@ -33,7 +35,7 @@ body {
 
     &:hover:not(:disabled) {
         background: linear-gradient(135deg, #a1610d, #6a0572);
-        transform: translateY(-2px);
+        transform: translateY(-5px);
         box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
     }
 
@@ -62,7 +64,7 @@ body {
 }
 
 /* NORMAL STUFF */
-$dark-bg: #3a2c5a;
+$dark-bg: #7a5cbe;
 $purple: #d700ff;
 $brown: #ffd700;
 $pink-red: #ff85c1;
@@ -164,20 +166,13 @@ h1.ai-overlord-title {
 .sticky-section {
     position: -webkit-sticky; /* For Safari */
     position: sticky;
-    background-color: #333;
     top: 0;
     z-index: 10;
-    width: 960px;
-    margin-bottom: 40px;
-    padding: 10px 0;
-}
-
-.bottom-shadow {
-    background-color: #2a2a2a;
+    width: 1060px;
     padding: 20px;
+    background-color: #2a2a2a;
     margin: 30px auto;
-    /* Bottom-only box-shadow */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.5);
 }
 
 #autoGathererCounter,
@@ -190,7 +185,7 @@ h1.ai-overlord-title {
 }
 
 #game-container {
-    width: 1000px;
+    width: 1100px;
     margin: 0 auto;
 }
 
@@ -206,10 +201,6 @@ h1.ai-overlord-title {
 #resPerSec {
     font-size: 1.5em;
     margin-left: auto;
-}
-
-#resourceIncreaseButton {
-    margin-left: 20px;
 }
 
 #processingPowerBar {
@@ -228,8 +219,8 @@ h1.ai-overlord-title {
 
 #viperCoinBar {
     display: flex;
+    align-items: flex-start;
     justify-content: space-between;
-    margin-top: 4px;
 }
 
 #viperCoinCounter {
@@ -241,21 +232,27 @@ h1.ai-overlord-title {
     margin-left: auto;
 }
 
+#stage1 {
+    width: 99.9%; // so that everything fits behind the sticky header
+}
+
 #stageBar {
+    margin-top: -20px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 }
 #stage-timer {
     font-size: 3em;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
-    margin-left: auto;
+    padding: 5px;
 }
 
 #researchLab {
     margin-top: 20px;
     padding: 10px;
+    height: 390px;
     background-color: #222;
     border: 2px solid #000;
     border-radius: 10px;
@@ -302,7 +299,9 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 #quantumComputingCenter {
     margin-top: 20px;
+    margin-bottom: 20px;
     padding: 10px;
+    height: 390px;
     background-color: #444;
     border: 2px solid #000;
     border-radius: 10px;
@@ -340,7 +339,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 #globalAiNetwork {
     margin-top: 20px;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
     padding: 10px;
     background-color: #666;
     border: 2px solid #000;
@@ -348,6 +347,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 // Styles for Global AI Network Header
@@ -408,9 +408,8 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 .global-ai-network-map {
     position: relative;
     width: 100%;
-    max-width: 1200px;
-    height: 495px;
-    margin: 0 auto;
+    max-width: 1070px;
+    height: 535px;
     background-color: #a3a3a3;
     border: 2px solid #333;
     border-radius: 10px;
@@ -424,8 +423,8 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
         .country {
             fill: #86c440;
-            stroke: $dark-bg;
-            stroke-width: 1;
+            stroke: #18062c;
+            stroke-width: 0.25;
             transition: fill 0.3s, transform 0.3s;
 
             &:hover,
@@ -479,10 +478,10 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 .map-overlay {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 976px;
-    height: 495px;
+    top: -10px;
+    left: -65px;
+    width: 1196px;
+    height: 550px;
     pointer-events: none;
 }
 
@@ -562,6 +561,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 }
 
 .button-gather-res,
+#resourceIncreaseButton,
 #music-toggle-button,
 #prev-track-button,
 #next-track-button {
@@ -575,7 +575,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     font-weight: 600;
     font-size: 18px;
     align-items: center;
-    margin: 5px;
+    margin: 10px;
     padding: 0 18px;
     line-height: 30px;
     text-align: center;
@@ -806,7 +806,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 .progress-bar {
     width: 100%;
-    height: 15px;
+    height: 13px;
     background-color: #ddd;
     border: 2px solid black;
     border-radius: 5px;
@@ -816,8 +816,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 }
 
 .progress-fill {
-    border-right: 1px solid black;
-    border-radius: 2px;
+    border-right: 2px solid black;
     height: 100%;
     background-color: #4caf50;
     width: 0;
@@ -826,7 +825,6 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 
 .music-progress-fill {
     border-right: 1px solid black;
-    border-radius: 2px;
     height: 100%;
     background: linear-gradient(135deg, #0b112e, #3859ec, #00eeff, #a9f8fd);
     width: 0;
@@ -1374,15 +1372,15 @@ $crt-overscan-width: 2.66667em;
 }
 
 $table-bg: #0e0b16;
-$header-bg: #6a0572;
-$header-text: #ffaaaa;
-$odd-row-bg: #a1610d;
-$even-row-bg: #ff2e63;
-$hover-bg: #6a0572;
-$border-color: #ffaaaa;
-$text-color: #ffffff;
+$table-header-bg: #7777e4;
+$table-header-text: #111111;
+$table-odd-row-bg: #1a1a1a;
+$table-even-row-bg: #000033;
+$table-hover-bg: #0000ff;
+$table-border-color: #0000e6;
+$table-text-color: #ffffff;
 
-table {
+.stage-1-table {
     table-layout: auto;
     width: auto;
     max-width: none;
@@ -1390,19 +1388,19 @@ table {
     border-collapse: collapse;
     font-family: 'Space Grotesk', sans-serif;
     background-color: $table-bg;
-    border: 2px solid $header-bg;
+    border: 2px solid $table-header-bg;
 
     tbody {
         tr {
             &:nth-child(odd) {
-                background-color: $odd-row-bg;
+                background-color: $table-odd-row-bg;
             }
             &:nth-child(even) {
-                background-color: $even-row-bg;
+                background-color: $table-even-row-bg;
             }
 
             &:hover {
-                background-color: $hover-bg;
+                background-color: $table-hover-bg;
             }
         }
     }
@@ -1410,16 +1408,16 @@ table {
     th {
         text-align: left;
         padding: 12px 15px;
-        background-color: $header-bg;
-        color: $header-text;
-        border: 1px solid $border-color;
+        background-color: $table-header-bg;
+        color: $table-header-text;
+        border: 1px solid $table-border-color;
         font-size: 1.1em;
     }
 
     td {
         padding: 12px 15px;
-        border: 1px solid $border-color;
-        color: $text-color;
+        border: 1px solid $table-border-color;
+        color: $table-text-color;
         font-size: 1em;
     }
 
