--- a/style.scss
+++ b/style.scss
@@ -10,13 +10,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    max-width: -moz-fit-content;
     max-width: fit-content;
 }
 
 body {
     background-color: #333333;
     color: #ffffff;
-    user-select: none;
+    -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .dev-button {
@@ -580,6 +583,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     line-height: 30px;
     text-align: center;
     text-decoration: none;
+    -moz-user-select: none;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -605,6 +609,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     line-height: 30px;
     text-align: center;
     text-decoration: none;
+    -moz-user-select: none;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -671,6 +676,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
 .flex-column {
     display: flex;
     flex-direction: column;
+    width: -moz-fit-content;
     width: fit-content;
 }
 
@@ -702,6 +708,7 @@ $globalAiNetwork-gradient: linear-gradient(45deg, #007bff, #ffa500);
     position: relative;
     z-index: 0;
     border-radius: 10px;
+    -moz-user-select: none;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
@@ -1131,6 +1138,7 @@ $slider-glow-color: rgba(120, 12, 163, 0.7);
 #volume-slider {
     width: 150px;
     margin-left: 10px;
+    -moz-appearance: none;
     appearance: none;
     -webkit-appearance: none;
     width: 100%;
@@ -1151,6 +1159,7 @@ $slider-glow-color: rgba(120, 12, 163, 0.7);
         background: $slider-thumb-color;
         cursor: pointer;
         box-shadow: 0 0 10px $slider-glow-color;
+        -webkit-transition: $slider-track-color 0.3s ease, transform 0.2s ease;
         transition: $slider-track-color 0.3s ease, transform 0.2s ease;
 
         &:hover {
@@ -1165,6 +1174,7 @@ $slider-glow-color: rgba(120, 12, 163, 0.7);
         background: $slider-thumb-color;
         cursor: pointer;
         box-shadow: 0 0 10px $slider-glow-color;
+        -moz-transition: $slider-track-color 0.3s ease, transform 0.2s ease;
         transition: $slider-track-color 0.3s ease, transform 0.2s ease;
 
         &:hover {
