--- a/style.css
+++ b/style.css
@@ -145,8 +145,7 @@ h1.ai-overlord-title:before {
   }
 }
 
-.sticky-section {
-  position: -webkit-sticky; /* For Safari */
+.sticky-section { /* For Safari */
   position: sticky;
   top: 0;
   z-index: 10;
@@ -212,6 +211,40 @@ h1.ai-overlord-title:before {
 #viperCoinPerSec {
   font-size: 1.5em;
   margin-left: auto;
+}
+
+#toggle-tooltips-row {
+  transform: scale(0.85);
+  min-width: 420px;
+  max-width: 420px;
+}
+
+#toggle-glitch-row {
+  transform: scale(0.85);
+  min-width: 420px;
+  max-width: 420px;
+}
+
+#viper-coin-counter-icon-row {
+  justify-content: center;
+  align-items: center;
+  margin-top: 2px;
+}
+
+#autoGathererButton {
+  margin-top: 10px;
+}
+
+#researchLabImage,
+#quantumComputingCenterImage {
+  border-radius: 10px;
+  border: 2px solid #000;
+  display: none;
+  margin-top: 20px;
+}
+
+#quantumComputingCenterImage {
+  margin-bottom: 20px;
 }
 
 #stage1 {
@@ -734,16 +767,16 @@ h1.ai-overlord-title:before {
 }
 .progress-bar {
   width: 100%;
-  height: 13px;
+  height: 16px;
   background-color: #ddd;
   border: 2px solid black;
   border-radius: 5px;
   overflow: hidden;
-  margin-top: 5px;
   position: relative;
 }
 
-.progress-fill {
+.progress-fill,
+.music-progress-fill {
   border-right: 2px solid black;
   height: 100%;
   background-color: #4caf50;
@@ -752,11 +785,7 @@ h1.ai-overlord-title:before {
 }
 
 .music-progress-fill {
-  border-right: 1px solid black;
-  height: 100%;
-  background: linear-gradient(135deg, #0b112e, #3859ec, #00eeff, #a9f8fd);
-  width: 0;
-  transition: width 0.3s ease;
+  background: linear-gradient(135deg, #0b112e, #3859ec, #00eeff);
 }
 
 .level-display {
@@ -933,7 +962,6 @@ h1.ai-overlord-title:before {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
@@ -945,7 +973,6 @@ h1.ai-overlord-title:before {
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
@@ -957,7 +984,6 @@ h1.ai-overlord-title:before {
   left: 2px;
   bottom: 2px;
   background-color: white;
-  -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
@@ -972,14 +998,10 @@ input:focus + .small-slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
 
 input:checked + .small-slider:before {
-  -webkit-transform: translateX(13px);
-  -ms-transform: translateX(13px);
   transform: translateX(13px);
 }
 
@@ -1012,7 +1034,7 @@ input:checked + .small-slider:before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 535px;
+  width: 700px;
   transform: scale(0.85);
   transform-origin: center center;
 }
@@ -1031,13 +1053,13 @@ input:checked + .small-slider:before {
 .progress-container {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   width: 100%;
 }
 
 #current-time,
 #total-time {
-  width: 50px;
+  width: auto;
   text-align: center;
   font-family: "Courier New", Courier, monospace;
   font-size: 24px;
@@ -1045,12 +1067,10 @@ input:checked + .small-slider:before {
 
 /* Volume Slider Styling */
 #volume-slider {
-  width: 150px;
-  margin-left: 10px;
+  width: 99%;
   -moz-appearance: none;
   appearance: none;
   -webkit-appearance: none;
-  width: 100%;
   height: 8px;
   border: #000 solid 1px;
   border-radius: 5px;
@@ -1269,6 +1289,4 @@ input:checked + .small-slider:before {
 .stage-1-table th,
 .stage-1-table td {
   transition: background-color 0.3s ease, border-color 0.3s ease;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
